# stravit_companion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  pyproject.toml
.github/: docker-ghcr.yml
.github/workflows/: docker-ghcr.yml  lint.yml  pytest_coverage.yml
stravit_companion/: config.py  runner.py
stravit_companion/alerts/: __init__.py  detector.py  factory.py  models.py  notification.py  pushover.py  renderer.py
stravit_companion/cli/: diff.py
stravit_companion/client/: fetcher.py  session.py
stravit_companion/db/: base.py  models.py  session.py
stravit_companion/parsing/: leaderboard.py
stravit_companion/snapshots/: compare.py  service.py
tests/: conftest.py
tests/alerts/: test_detector.py  test_rederer.py
tests/client/: test_fetcher.py
tests/parsing/: test_leaderboard_item.py
tests/runner/: test_runner.py
tests/snapshots/: test_service.py
