[project]
name = "stravit-companion"
version = "0.2.1"
description = "Lightweight Docker-based CLI for tracking Stravit challenge leaderboards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "commitizen>=4.10.1",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
#select = ["E", "F", "I", "N"]
select = [
    "E", "F", "I", "N",     # Tier 1
    "B", "UP", "SIM",       # Tier 2
    "S",                    # security (bandit)
    "RUF"]                  # ruff-specific footguns
# ignore = [
#   "B008",   # function call in default args – często false positive
# ]
ignore = [
  "S101",  # assert (ok w testach)
  "S311",  # random – dopuszczalne w non-crypto
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["B", "SIM"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
annotated_tag = true
version_provider = "uv"
update_changelog_on_bump = true

[tool.setuptools]
packages = ["stravit_companion"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.coverage.run]
omit = [
  "stravit_companion/alerts/pushover.py",
  "stravit_companion/client/session.py",
]